--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="68dp" >
 
@@ -20,12 +22,12 @@
                 android:id="@+id/iv_image"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:src="@drawable/abc_btn_radio_material">
+                >
             </ImageView>
 
             <TextView
                 android:id="@+id/tv_text"
-
+                tools:text="Decatur"
                 android:layout_toRightOf ="@+id/iv_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,7 +38,7 @@
                 android:id="@+id/tv_blah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Another Recyclerview Fragment"
+                tools:text="Georgia"
                 android:layout_below="@+id/tv_text"
                 android:layout_toRightOf="@+id/iv_image"
                 android:layout_toEndOf="@+id/iv_image">
